# viiv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config copy.json  config.json  package.json  palette.json  pyproject.toml  requirements.txt  utils.py  viiv.ps1  viiv.py  viiv.sh  vsc-extension-quickstart.md
output/: all_groups.json  dynamic-palette.json  not_used_groups.json  noused_groups.json  random-palette.json  selected-token-palette.json  selected-ui-palette.json  used_groups.json
templates/: viiv-color-theme.template.json
tests/: viiv_basic_test.py  viiv_package_test.py  viiv_test.py
themes/: Eu.VsCode-color-theme.json  Eu.VsCode-color-theme_auto_generated.json  black-color-theme.json  blue-color-theme.json  cyan-color-theme.json  dynamic-color-theme.json  dynamic-palette.json  dynamic-palette.txt  eu.vscode.jsonc  green-color-theme.json  new-dynamic-color-theme.json  selected-palette.json  selected-token-palette.json  selected-ui-palette.json  selected_palette.json  viiv-atom-dark-color-theme.json  viiv-black-color-theme.json  viiv-black-pearl-color-theme.json  viiv-blue-color-theme.json  viiv-color-theme.json  viiv-color-theme.template  viiv-color-theme.template.bak.json  viiv-color-theme.template.json  viiv-cyan-color-theme.json  viiv-cyan-pearl-color-theme.json  viiv-dark-black-color-theme.json  viiv-dark-black-green-color-theme.json  viiv-dark-blue-02-color-theme.json  viiv-dark-blue-color-theme.json  viiv-dark-blue-desaturated-color-theme.json  viiv-dark-blue-green-color-theme.json  viiv-dark-cyan-02-color-theme.json  viiv-dark-cyan-color-theme.json  (+74 more)
(+3 files in other folders)
